[project]
name = "rag-project"
version = "0.1.0"
description = ""
authors = [
    {name = "david",email = "dg071018@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core (>=0.3.70,<0.4.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "langchain-postgres (>=0.0.15,<0.0.16)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
