[project]
name = "rag-project"
version = "0.1.0"
description = ""
authors = [
    {name = "david",email = "dg071018@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core (>=0.3.70,<0.4.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "langchain-postgres (>=0.0.15,<0.0.16)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "pypdf (>=5.9.0,<6.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
